<resources>
    <string name="app_name">BusWatch</string>
    <string name="secure_and_private">Secure and Private</string>
    <string name="know_exactly_where_your_child_s_bus_is_at_all_times_our_real_time_gps_tracking_provides_peace_of_mind_with_accurate_updates">know exactly where your child’s bus is at all times. Our real-time GPS tracking provides peace of mind with accurate updates.</string>
    <string name="todo">TODO</string>
    <string name="reliable_real_time_tracking"><![CDATA[Reliable & Real-time Tracking]]></string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="allow">Allow</string>
    <string name="cancel">Cancel</string>
    <string name="_40_students">40 Students</string>
    <string name="_12_seats">12 Seats</string>
    <string name="bus_details">Bus Details</string>
    <string name="bus_information">Bus Information</string>
    <string name="driver_information">Driver Information</string>
    <string name="name">Name</string>
    <string name="mike_johnson">Mike Johnson</string>
    <string name="email">Email*</string>
    <string name="john_smith_school_com">john.smith@school.com</string>
    <string name="phone">Phone</string>
    <string name="_555_0101">555-0101</string>
    <string name="license_number">License Number</string>
    <string name="dl123456">DL123456</string>
    <string name="bus_number">Bus Number</string>
    <string name="bus_001">BUS-001</string>
    <string name="status">Status</string>
    <string name="active">Active</string>
    <string name="capacity">Capacity</string>
    <string name="total_of_students">Total of Students</string>
    <string name="_28_students">28 Students</string>
    <string name="available_seats">Available Seats</string>
    <string name="buswatch">BusWatch</string>
    <string name="account">Account</string>
    <string name="settings">Settings</string>
    <string name="good_morning_robert"><![CDATA[Good morning, Robert!]]></string>
    <string name="_9_41_am">9:41 AM</string>
    <string name="justin_wilson">Justin Wilson</string>
    <string name="grade_1">Grade 1</string>
    <string name="at_home">At Home</string>
    <string name="on_the_bus">On the Bus</string>
    <string name="medical_details">Medical Details</string>
    <string name="general">General</string>
    <string name="emergency">Emergency</string>
    <string name="student_details">Student Details</string>
    <string name="medical_information">Medical Information</string>
    <string name="blood_type">Blood Type</string>
    <string name="policy_number">Policy Number</string>
    <string name="peanuts">Peanuts</string>
    <string name="inhaler">Inhaler</string>
    <string name="asthma">Asthma</string>
    <string name="pineapple">Pineapple</string>
    <string name="allergies">Allergies</string>
    <string name="current_medication">Current Medication</string>
    <string name="medical_condition">Medical Condition</string>
    <string name="blue_cross_shield">Blue Cross Shield</string>
    <string name="insurance_provider">Insurance Provider</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="student_id_se2024001"><![CDATA[Student ID: SE2024001]]></string>
    <string name="_3_15_2020">3/15/2020</string>
    <string name="_1st_grade">1st Grade</string>
    <string name="kingstown_2_subdivision_caloocan_city">Kingstown 2 Subdivision Caloocan City</string>
    <string name="the_immaculate_mother_academy_inc">The Immaculate Mother Academy Inc.</string>
    <string name="home_address">Home Address</string>
    <string name="grade_1a">GRADE 1A</string>
    <string name="bus_icon">Bus icon</string>
    <string name="mail_icon">Mail icon</string>
    <string name="phone_icon">Phone icon</string>
    <string name="card_icon">Card icon</string>
    <string name="user_icon">User icon</string>
    <string name="driver_avatar">Driver avatar</string>
    <string name="logo">App logo</string>
    <string name="student_avatar">Student avatar</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="your_child_s_safety_is_our_top_priority_our_app_uses_secure_technology_to_protect_your_data_and_ensure_a_safe_journey">Your child’s safety is our top priority. Our app uses secure technology to protect your data and ensure a safe journey.</string>
    <string name="allow_access_to_your_location">Allow access to your location</string>
    <string name="by_allowing_access_bus_tracking_app_finds_your_location_and_provides_you_with_best_rides">By allowing access bus tracking app finds your location and provides you with best rides</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password*</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="show_password">Show password</string>
    <string name="sign_up">Sign Up</string>
    <string name="user_avatar">User avatar</string>
    <string name="live_tracking">Live Tracking</string>
    <string name="bus_driver_bus_001">Bus Driver - BUS-001</string>
    <string name="notification_icon">Notification icon</string>
    <string name="temporary_route_change">Temporary route change due to road construction on Main Street</string>
    <string name="bus_arriving_soon">Bus Arriving Soon</string>
    <string name="_13hrs_ago">13hrs Ago</string>
    <string name="back_button">Back button</string>
    <string name="all">All</string>
    <string name="unread">Unread</string>
    <string name="parent_details">Parent Details</string>
    <string name="profile_information">Profile Information</string>
    <string name="my_children">My Children</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="full_name">Full Name</string>
    <string name="account_status">Account Status</string>
    <string name="robert_wilson">Robert Wilson</string>
    <string name="_0992_329_0293">0992-329-0293</string>
    <string name="wilson_robert_gmail_com">wilson.robert@gmail.com</string>
    <string name="approved">APPROVED</string>
    <string name="the_immaculate_mother_academy">The Immaculate Mother Academy</string>
    <string name="phone_0923_023_1023">Phone: 0923-023-1023</string>
    <string name="email_emilitawilson_gmail_com">Email: emilitawilson@gmail.com</string>
    <string name="notification_preference">Notification Preference</string>
    <string name="bus_departure">Bus Departure</string>
    <string name="preferred_language">Preferred Language</string>
    <string name="when_the_bus_leaves_the_depot">When the bus leaves the depot</string>
    <string name="when_the_bus_arrives_at_pickup_drop">When the bus arrives at pickup/drop</string>
    <string name="when_your_child_boards_the_bus">When your child boards the bus</string>
    <string name="child_boarding">Child Boarding</string>
    <string name="bus_arrival">Bus Arrival</string>
    <string name="current_password">Current Password*</string>
    <string name="new_password">New Password*</string>
    <string name="confirm_password">Confirm Password*</string>
    <string name="when_there_are_route_delays">When there are route delays</string>
    <string name="delays">Delays</string>
    <string name="security">Security</string>
    <string name="child_icon" />
    <string name="profile_avatar" />
    <string name="view_details" />
    <string name="edit" />
    <string name="english">ENGLISH</string>
    <string name="logout">LOGOUT</string>
    <string name="change_password">Change Password</string>
    <string name="notifications_icon" />
    <string name="language_icon" />
    <string name="security_icon" />
    <string name="parent_information">Parent Information</string>
    <string name="child_information">Child Information</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="enter_your_first_name">Enter your first name</string>
    <string name="next">NEXT</string>
    <string name="suffix">Suffix</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="create_a_password">Create a password</string>
    <string name="first_name">First Name*</string>
    <string name="phone_number">Phone Number*</string>
    <string name="last_name">Last Name*</string>
    <string name="preffered_language">Preffered Language*</string>
    <string name="enter_your_last_name">Enter your last name</string>
    <string name="middle_name">Middle Name</string>
    <string name="enter_your_middle_name">Enter your middle name</string>
    <string name="enter_your_suffix">Enter your suffix</string>
    <string name="engish">Engish</string>
    <string name="medical_icon" />
    <string name="add_photo">Add Photo</string>
    <string name="child_s_first_name">Child’s First Name*</string>
    <string name="add_another_child">+ Add Another Child</string>
    <string name="child_s_last_name">Child’s Last Name*</string>
    <string name="back">Back</string>
    <string name="enter_child_s_last_name">Enter child’s last name</string>
    <string name="child_s_middle_name">Child’s Middle Name</string>
    <string name="enter_child_s_name">Enter child’s name</string>
    <string name="class_grade">Class/Grade</string>
    <string name="child_s_suffix">Child’s Suffix</string>
    <string name="enter_child_s_suffix">Enter child’s suffix</string>
    <string name="enrollment_form">Enrollment Form*</string>
    <string name="enter_child_s_middle">Enter child’s middle...</string>
    <string name="age">Age*</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="enter_child_s_first_name">Enter child’s first name</string>
    <string name="child_1">Child 1</string>
    <string name="child_avatar" />
    <string name="enter_child_s_class_grade">Enter child’s grade</string>
    <string name="enter_child_s_age"> Enter child’s age</string>
    <string name="add_photo_icon" />
    <string name="enter_contact_name">Enter contact name</string>
    <string name="contact_name">Contact Name</string>
    <string name="e_g_mother_father_guardian">e.g., Mother, Father, Guardian</string>
    <string name="enter_contact_phone">Enter contact phone</string>
    <string name="relationship">Relationship</string>
    <string name="emergency_contact_2_optional">Emergency Contact 2 (Optional)</string>
    <string name="contact_phone">Contact Phone</string>
    <string name="emergency_contact_1">Emergency Contact 1*</string>
    <string name="e_g_inhaler_epipen_none">e.g., Inhaler, EpiPen (None)</string>
    <string name="e_g_asthma_diabetes_none">e.g., Asthma, Diabetes (None)</string>
    <string name="medical_conditions_optional">Medical Conditions (Optional)</string>
    <string name="current_medications_optional">Current Medications (Optional)</string>
    <string name="select_blood_type">Select blood type</string>
    <string name="allergies_optional">Allergies (Optional)</string>
    <string name="e_g_peanuts_shellfish_none">e.g., Peanuts, Shellfish (None)</string>
    <string name="blood_type_optional">Blood Type (Optional)</string>
    <string name="medical_information_for_child_s_name">Medical Information for: Child’s Name</string>
    <string name="register">Register</string>
    <string name="authorized_pickup">Authorized Pickup</string>
    <string name="father">Father</string>
    <string name="robertwilson_gmail_com">robertwilson@gmail.com</string>
    <string name="_555_987_6543">(555) 987-6543</string>
    <string name="_1a">1A</string>
    <string name="grade">Grade</string>
    <string name="school">School</string>
    <string name="class_name">Class</string>
    <string name="a">A+</string>
    <string name="dingdong_dantes">DingDong Dantes</string>
</resources>